# Feature-Selection

./: .gitignore  IrregularUsage.py  README.md  config.yaml  feature_selection.py  irregular_usage.py  panda_corr.py  pyproject.toml  travel_segment.py
src/: data_handler.py  data_loader.py  feature_processor.py  feature_ranker.py  preprocessor.py
src/models/: random_forest.py
src/s_rank/: FeatureRanker.py  dataframe_extended.py
src/utils/: feature_importance.py  logger.py  segments.py  statistics_analysis.py
