[tool.poetry]
name = "Feature Selection"
version = "1"
description = "beta V"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
scikit-learn = "^1.5.1"
pyyaml = "^6.0.1"
xgboost = "^2.1.1"
matplotlib = "^3.9.1.post1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
